test/e2e/testdata/backend-tls.yaml
apiVersion: v1
data:
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDQzCCAiugAwIBAgIBATANBgkqhkiG9w0BAQsFADBCMRMwEQYDVQQKEwpFbnZv
[...]
    S5EAolzVv0yB7wHCWCgfG/ckdOTUNnE=
    -----END CERTIFICATE-----
kind: ConfigMap
metadata:
  name: backend-tls-checks-certificate
  namespace: gateway-conformance-infra
---
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURZVENDQWttZ0F3SUJBZ0lSQUpiK2x5QTJqZCtlUmRMTzR4Sm5kWVF3RFFZSktvWklodmNOQVFFTEJRQXcKUWpFVE1CRUdBMVVFQ2hNS1JXNTJiM2xRY205NGVURVFNQTRHQTFVRUN4TUhSMkYwWlhkaGVURVpNQmNHQTFVRQpBeE1RUlc1MmIza2dSMkYwWlhkaGVTQkRRVEFnRncweU5EQXpNVEF4TlRNeU1UZGFHQTh5TVRJME1ETXhNREUyCk16SXhOMW93SkRFUU1BNEdBMVVFQ2hNSFFXTnRaU0JEYnpFUU1BNEdBMVVFQXhNSFpHVm1ZWFZzZERDQ0FTSXcKRFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQUtGUnI2cVV1WFN1N3J5bHcvVmZXbm1kM0RXWgpTcGxDUFR6QUh1V3NpO [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBb1ZHdnFwUzVkSzd1dktYRDlWOWFlWjNjTlpsS21VSTlQTUFlNWF5TDFTU2FlUXhjCnoyekJ4UTkxVGJCd3dmQzZYZUxodWsxTjA5NVVPYno2dE5TeCtHelloK2VFYm1oVllHQTBGWk1YY1hOdEdIK3oKUDc3UFBZK0NBQ0tpeHh0clpXZU9FdXYwTHVRUHNHMWZsaWdjSVVMSm82Zk9oWGxZd21rRGl3SEdBMjhsWWcxawpRS0QwaDhpVkhUb3N1SXd5c0VUbEFxRDh1Y05FbWNzVU5OVUV2dXlOaUpSaTVXWVNEZld0bjFtWG01dUE2b2c2CmRKMDNkMHpkZHBHa0V4b1ZUSDAvMCt1RndyTExsTjBMSHJTa2RxeitGSFZweWtuSldCOE5RSzZ4TTlscE5ubksKeml1RnVoakJmZ [...]
kind: Secret
metadata:
  name: backend-tls-checks-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: v1
kind: Service
metadata:
  name: tls-backend-2
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend-2
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-backend-2
  namespace: gateway-conformance-infra
  labels:
    app: tls-backend-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-backend-2
  template:
    metadata:
      labels:
        app: tls-backend-2
    spec:
      containers:
        - name: tls-backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret-volume
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: tls-backend-2
            - name: TLS_SERVER_CERT
              value: /etc/secret-volume/crt
            - name: TLS_SERVER_PRIVKEY
              value: /etc/secret-volume/key
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: secret-volume
          secret:
            secretName: backend-tls-checks-certificate
            items:
              - key: tls.crt
                path: crt
              - key: tls.key
                path: key
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: BackendTLSPolicy
metadata:
  name: policy-btls
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: ''
    kind: Service
    name: tls-backend-2
    sectionName: "443"
  tls:
    caCertRefs:
      - name: backend-tls-checks-certificate
        group: ''
        kind: ConfigMap
    hostname: example.com
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-with-backend-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-tls
      backendRefs:
        - name: tls-backend-2
          port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: tls-backend-2-no-policy
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-backend-2
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-without-backend-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-tls-without-policy
      backendRefs:
        - name: tls-backend-2-no-policy
          port: 443
