test/e2e/testdata/backend-upgrade.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-upgrade-example
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-backend-upgrade
    namespace: gateway-conformance-infra
  circuitBreaker:
    maxParallelRequests: 10000
    maxConnections: 10000
    maxPendingRequests: 10000
  retry:
    retryOn:
      triggers:
      - connect-failure
      - reset
    numRetries: 10
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-backend-upgrade
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /backend-upgrade
    backendRefs:
    - name: infra-backend-v1
      port: 8080
