test/e2e/testdata/circuitbreaker.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: circuitbreaker-example
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-circuitbreaker
    namespace: gateway-conformance-infra
  circuitBreaker:
    maxConnections: 0
    maxParallelRequests: 0
    maxPendingRequests: 0
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-with-circuitbreaker
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /circuitbreaker
    backendRefs:
    - name: infra-backend-v1
      port: 8080
