test/e2e/testdata/envoy-shutdown.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-envoy-shutdown
  namespace: gateway-upgrade-infra
spec:
  parentRefs:
  - name: ha-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /envoy-shutdown
    backendRefs:
    - name: infra-backend
      port: 8080
