test/e2e/testdata/graceful-termination-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-termination-sts
  namespace: gateway-conformance-infra
spec:
  selector:
    app: backend-termination-sts
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend-termination-sts
  namespace: gateway-conformance-infra
  labels:
    app: backend-termination-sts
spec:
  replicas: 1
  serviceName: backend-termination-sts
  selector:
    matchLabels:
      app: backend-termination-sts
  template:
    metadata:
      labels:
        app: backend-termination-sts
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: backend
          image: "docker.io/fogninid/echo-basic:0.5"
          imagePullPolicy: IfNotPresent
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: backend-termination-sts
            - name: DELAY_STOP
              value: 10s
            - name: DELAY_TERMINATION
              value: 40s
          lifecycle:
            preStop:
              httpGet:
                port: 3000
                path: /stop?setNotReadyAfter=20s
          readinessProbe:
            initialDelaySeconds: 0
            periodSeconds: 1
            failureThreshold: 10
            httpGet:
              port: 3000
              path: /ready
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: graceful-termination-sts
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /graceful-termination-sts
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: backend-termination-sts
          port: 8080
