test/e2e/testdata/local-ratelimit.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-specific-user
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-ratelimit-specific-user
    namespace: gateway-conformance-infra
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 10
          unit: Hour
      - clientSelectors:
        - headers:
          - name: x-user-id
            value: john
        limit:
          requests: 3
          unit: Hour
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-all-traffic
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-ratelimit-all-traffic
    namespace: gateway-conformance-infra
  rateLimit:
    type: Local
    local:
      rules:
      - limit:
          requests: 3
          unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-ratelimit-specific-user
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
    matches:
    - path:
        type: Exact
        value: /ratelimit-specific-user
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-ratelimit-all-traffic
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
    matches:
    - path:
        type: Exact
        value: /ratelimit-all-traffic
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-no-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
    matches:
    - path:
        type: Exact
        value: /no-ratelimit
