test/e2e/testdata/preserve-case.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-preserve-case
  namespace: gateway-preserve-case-backend
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gateway-conformance-infra
  to:
  - group: ""
    kind: Service
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: preserve-case
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
    namespace: gateway-conformance-infra
  http1:
    preserveHeaderCase: true
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: preserve-case
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /preserve
    backendRefs:
    - name: fasthttp-backend
      namespace: gateway-preserve-case-backend
      port: 8000
