test/e2e/testdata/ratelimit-multiple-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: eg-rate-limit
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http-80
      protocol: HTTP
      port: 80
    - name: http-8080
      protocol: HTTP
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cidr-ratelimit
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: eg-rate-limit
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-all-ips
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: cidr-ratelimit
    namespace: gateway-conformance-infra
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - sourceCIDR:
                value: 0.0.0.0/0
                type: distinct
          limit:
            requests: 3
            unit: Hour
