test/e2e/testdata/redirect-replaceprefixmatch-slash.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: redirect-replaceprefixmatch-slash
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/foo/
      filters:
        - requestRedirect:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
          type: RequestRedirect
    - matches:
        - path:
            type: PathPrefix
            value: /api/bar
      filters:
        - requestRedirect:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
          type: RequestRedirect
