test/e2e/testdata/weighted-backend-bluegreen.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: weight-bluegreen-http-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: infra-backend-v1
          port: 8080
          weight: 9
        - name: infra-backend-v2
          port: 8080
          weight: 1
